Expansion of modding support for inlines and some buildings

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -657,69 +657,11 @@ languages:
       ai_unobtainium: [job_add_generic]
 
 addons:
-  inlines:
-    - jobs/inline_evolved_healthcare
-    - jobs/inline_evolved_entertainer
-    - jobs/inline_evolved_enforcer
-    - jobs/inline_evolved_colonist
-    - jobs/inline_evolved_clerk
-    - jobs/inline_evolved_coordinator
-    - jobs/inline_evolved_soldier
-    - jobs/inline_evolved_maintenance_drone
-    - jobs/inline_evolved_patrol_drone
-    - jobs/inline_evolved_warrior_drone
-    - jobs/inline_evolved_researcher
-    - jobs/inline_evolved_researcher_swaps
-    - jobs/inline_evolved_priest
-    - jobs/inline_evolved_priest_swaps
-    - jobs/inline_evolved_politician_civic_swaps
-    - jobs/inline_evolved_executive_civic_swaps
-    - jobs/inline_evolved_maintenance_civic_hive_swaps
-    - jobs/inline_evolved_maintenance_civic_machine_swaps
-    - jobs/inline_evolved_prime_drone
-    - jobs/inline_evolved_synapse_civic_swaps
-    - jobs/capital/inline_evolved_add_job_civic_hive
-    - jobs/capital/inline_evolved_add_job_civic_machine
-    - jobs/capital/inline_evolved_add_job_civic_regular
-    - jobs/capital/inline_evolved_add_job_per_ascension_civic_hive
-    - jobs/capital/inline_evolved_add_job_per_ascension_civic_machine
-    - jobs/capital/inline_evolved_add_job_per_ascension_civic_regular
-    - jobs/capital/inline_evolved_add_ruler_civic_regular
-    - capitals/inline_evolved_hive_capital
-    - capitals/inline_evolved_machine_capital
-    - capitals/inline_evolved_regular_capital
-    - capitals/inline_evolved_special_capital
-    - capitals/inline_evolved_all_capital
-    - capitals/inline_evolved_colony
-    - capitals/inline_evolved_colony_habitat
-    - capitals/inline_evolved_common_habitat_modifiers
-    - capitals/inline_evolved_common_modifiers
-    - districts/type/inline_evolved_rural_farming
-    - districts/type/inline_evolved_rural_generator
-    - districts/type/inline_evolved_rural_mining
-    - districts/type/inline_evolved_trade
-    - districts/type/inline_evolved_housing_nexus
-    - districts/type/inline_evolved_housing_hive
-    - districts/type/inline_evolved_housing_habitat
-    - districts/type/inline_evolved_housing_generic
-    - districts/type/inline_evolved_housing_city
-    - districts/type/inline_evolved_housing_arcology
-    - modifiers/inline_evolved_rural_farming_district_build_speed
-    - modifiers/inline_evolved_rural_farming_district_max
-    - modifiers/inline_evolved_rural_generator_district_build_speed
-    - modifiers/inline_evolved_rural_generator_district_max
-    - modifiers/inline_evolved_rural_mining_district_build_speed
-    - modifiers/inline_evolved_rural_mining_district_max
-    - jobs/inline_evolved_farmer
-    - jobs/inline_evolved_farmer_secondary
-    - jobs/inline_evolved_miner
-    - jobs/inline_evolved_miner_secondary
-    - jobs/inline_evolved_technician
-    - jobs/inline_evolved_technician_secondary
   suffixes:
     - giga_patch
     - pd_patch
     - serente
+    - kes
     - modded_other
 
 missing_sprites: # paste log errors here with missing modified icons, preferably remove after to not regen in case these sprites are added
