rework: evaluator modifiers and admin ecu fixes

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -227,6 +227,7 @@ languages:
       planet_jobs_simple_drone: [ "$pop_cat_simple_drone$ Pop £job£ Jobs", job_strata ]
       planet_jobs_complex_drone: [ "$pop_cat_complex_drone$ Pop £job£ Jobs", job_strata ]
       planet_jobs_complex_and_simple_drone: [ "$pop_cat_complex_drone$ Drone Pop £job£ Jobs", job_strata ]
+      planet_jobs_tec_free_agent: [ '$pop_cat_tec_free_agent$', job_strata ]
 
       planet_jobs_robotic: [ "§BRobot§! Pop £job£ Jobs", job_archetype ]
       planet_jobs_organics: [ "§YOrganic§! Pop £job£ Jobs", job_archetype ]
