feat: adjusted designation to remove/change upkeep reductions to output

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -497,6 +497,8 @@ languages:
       building_tec_energrid_1: ["$building_tec_energrid_1$", building_generic]
       building_tec_stripmine_1: ["$building_tec_stripmine_1$", building_generic]
       building_hydroponics_farm: ["$building_hydroponics_farm$", building_generic]
+      building_tec_machine_anglers_extractor: ["$building_tec_machine_anglers_extractor$", building_generic]
+      building_tec_machine_anglers_extractor_on: ["$building_tec_machine_anglers_extractor_on$", building_generic]
 
     jobs:
       # workers
