feat: 3.12 capitals and some inlines and cyborg workers eco category

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -348,6 +348,7 @@ languages:
       pop_category_bio_trophy: [ '$BIO_TROPHIES$', pop_category ]
       pop_category_slave: [ '$SLAVES$', pop_category ]
       pop_category_workers: [ '$WORKERS$', pop_category ]
+      pop_category_workers_cyborgs: [ '§BCyborg§! $WORKERS$', pop_category ]
       pop_category_specialists: [ '$SPECIALISTS$', pop_category ]
       pop_category_rulers: [ '$RULERS$', pop_category ]
       pop_category_tec_free_agent: [ '$planet_tec_free_agents$', pop_category ]
