feat: implemented pop category changes and a few scripted modifiers to round up missing ones from vanilla

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -354,6 +354,8 @@ languages:
       pop_category_tec_free_agent: [ '$planet_tec_free_agents$', pop_category ]
 
       pop_category_normal_resources: [ '£pop£ Pops', pop_category ]
+      pop_category_cyborgs_normal_resources: [ '§BCyborg§! £pop£ Pops', pop_category ]
+      
       pop_category_purge_resources: [ 'Purged £pop£ Pops', pop_category ]
       pop_category_assimilation_resources: [ 'Assimilated £pop£ Pops', pop_category ]
       pop_category_non_slave_resources: ['Non-Slave £pop£ Pops', pop_category]
@@ -399,6 +401,7 @@ languages:
       leaders_tec_ai_planetary_nodes: ["$tec_loc_ai_planetary_node$", leader]
       leaders_tec_ai_idle_nodes: ["$tec_loc_ai_idle_node$", leader]
       leaders_tec_idle: ["$tec_loc_idle_leader$", leader]
+      leaders_cyborgs: ["§BCyborg§! Leader", leader]
 
       leader_officials_psionic: ["§MPsionic§! Official", leader]
       leader_commanders_psionic: ["§MPsionic§! Commander", leader]
