--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -257,6 +257,8 @@ languages:
 
       planet_jobs_robotic_slave: [ "§BRobot§! $pop_cat_slave$ Pop £job£ Jobs", job_strata ]
       planet_jobs_robotic_worker: [ "§BRobot§! [GetWorker] Pop £job£ Jobs", job_strata ]
+      # why why why why why why PDX
+      planet_jobs_robot_worker: [ "§BRobot§! [GetWorker] Pop £job£ Jobs", job_strata ]
       planet_jobs_robotic_specialist: [ "§BRobot§! [GetSpecialist] Pop £job£ Jobs", job_strata ]
       planet_jobs_robotic_ruler: [ "§BRobot§! $pop_cat_ruler$ Pop £job£ Jobs", job_strata ]
       planet_jobs_robotic_simple_drone: [ "§BRobot§! $pop_cat_simple_drone$ Pop £job£ Jobs", job_strata ]
@@ -328,8 +330,6 @@ languages:
       planet_livestock_biological: [ '£job_livestock£ Biological $job_livestock_plural$', job ]
       planet_livestock_lithoid: ['£job_livestock£ Lithoid $job_livestock_plural$', job]
 
-      planet_tec_batteries: [ '£job_organic_battery£ $job_organic_battery_plural$', job ]
-
       planet_tec_labour_heroes: ['£job_tec_labour_hero£ $job_tec_labour_hero_plural$', job ]
       planet_tec_transcendents: ['£job_tec_transcendent£ $job_tec_transcendent_plural$', job]
       planet_tec_occultists: ['£job_tec_grand_occultist£ $job_tec_grand_occultist_plural$ and £job_tec_minor_occultist£ $job_tec_minor_occultist_plural$', job]
@@ -339,6 +339,7 @@ languages:
       planet_tec_labrats: ['£job_tec_labrat£ $job_tec_labrat_plural$', job]
       planet_tec_peasants: [ '£job_tec_peasant£ $job_tec_peasant_plural$', job ]
       planet_bath_attendants: ['£job_bath_attendant£ $job_bath_attendant_plural$', job]
+      planet_bath_attendants_individual_machine: ['£job_bath_attendant£ $job_bath_attendant_plural$', job]
       planet_bath_attendants_hive: ['£job_bath_attendant_hive£ $job_bath_attendant_hive_plural$', job]
       planet_bath_attendants_machine: ['£job_bath_attendant_machine£ $job_bath_attendant_machine_plural$', job]
 
