feat: mod support documentation and files auto gen and creed auth swaps

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -34,6 +34,23 @@ resources:
   - [all_research, "$tec_loc_research_resources$"]
   - [all_industrial, "$tec_loc_industrial_resources$"]
   - [all_basic, "$tec_loc_basic_resources$"]
+authorities:
+  - auth_direct_democratic
+  - auth_democratic
+  - auth_oligarchic
+  - auth_tec_theocracy
+  - auth_dictatorial
+  - auth_imperial
+  - auth_corporate
+  - auth_tec_patrocorporate
+  - auth_tec_ai
+  - auth_tec_ai_corporate
+  - auth_hive_mind
+  - auth_tec_hive_biological
+  - auth_tec_hive_cybernetic
+  - auth_tec_hive_biomechanical
+  - auth_machine_intelligence
+  - auth_tec_machine_consensus
 languages:
   english:
     templates:
