feat: added suffix for experimental external patch

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -35,7 +35,6 @@ resources:
   - [all_industrial, "$tec_loc_industrial_resources$"]
   - [all_basic, "$tec_loc_basic_resources$"]
 authorities:
-  - auth_direct_democratic
   - auth_democratic
   - auth_oligarchic
   - auth_tec_theocracy
@@ -690,6 +689,7 @@ addons:
     - serente
     - kes
     - modded_other
+    - tec_experimental
 
 missing_sprites: # paste log errors here with missing modified icons, preferably remove after to not regen in case these sprites are added
   default: gfx/interface/icons/modifiers/mod_unknown.dds
