feat: more centrality implementations

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -303,10 +303,7 @@ languages:
       planet_sr_miners: [ '£job£ Strategic Resource Gatherers', job ]
       planet_technician: [ '£job_technician£ [GetTechnician]', job ]
       planet_politicians: [ '£job_politician£ $job_politician_plural$', job ]
-      planet_administrators: 
-        - '£job_bureaucrat£ $job_bureaucrat_plural$'
-        - job
-        - mult: '[GetAdministratorPluralWithIcon]'
+      planet_administrators: [ '[GetAdministratorPluralWithIcon]', job ]
       planet_executives: [ '£job_executive£ $job_executive_plural$', job ]
       planet_managers: [ '£job_manager£ $job_manager_plural$', job ]
       planet_researchers: [ '£job_researcher£ [GetResearcherPlural]', job ]
