fix: hive world assembly districts, more job concepts and tags

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -469,7 +469,7 @@ languages:
       # Fake categories
 
       planet_industrial_jobs: [ '$tec_loc_industrial_jobs$', job ]
-      planet_jobs_tec_hired: [ '£job£ $private_hired$ Jobs', job ]
+      planet_jobs_tec_hired: [ '£job£ $tec_private_hired$ Jobs', job ]
 
       decisions: ["Decisions", decisions]
       decisions_arcologies: ["Arcology Decisions", decisions]
