fix: smol loc fixes

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -225,74 +225,74 @@ languages:
       planet_districts_rw_farming: [ '$planet_districts_rw_farming$', structure ]
       planet_districts_rw_replicator: [ '$planet_districts_rw_replicator$', structure ]
 
-      planet_jobs: [ "£job£ Jobs", generic ]
-      planet_jobs_productive: [ "Resource-Producing £job£ Jobs", generic ]
+      planet_jobs: [ "$tec_loc_jobs$", generic ]
+      planet_jobs_productive: [ "Resource-Producing $tec_loc_jobs$", generic ]
 
-      habitat_jobs: [ "£job£ Jobs", generic_on, "Habitats" ]
-      non_artificial_planet_jobs: [ "£job£ Jobs", generic_on, "Non-Artificial Worlds" ]
-      gaia_planet_jobs: [ '£job£ Jobs', job_on, 'Gaia Worlds' ]
-      perfect_planet_jobs: [ '£job£ Jobs', job_on, 'Perfect Planets' ]
-      non_perfect_planet_jobs: [ '£job£ Jobs', job_on, 'Non-Perfect Planets' ]
+      habitat_jobs: [ "$tec_loc_jobs$", generic_on, "Habitats" ]
+      non_artificial_planet_jobs: [ "$tec_loc_jobs$", generic_on, "Non-Artificial Worlds" ]
+      gaia_planet_jobs: [ '$tec_loc_jobs$', job_on, 'Gaia Worlds' ]
+      perfect_planet_jobs: [ '$tec_loc_jobs$', job_on, 'Perfect Planets' ]
+      non_perfect_planet_jobs: [ '$tec_loc_jobs$', job_on, 'Non-Perfect Planets' ]
 
-      planet_jobs_slave: [ "$pop_cat_slave$ Pop £job£ Jobs", job_strata ]
-      planet_jobs_worker: [ "[GetWorker] Pop £job£ Jobs", job_strata ]
-      planet_jobs_worker_only: [ "$pop_cat_worker$ Pop £job£ Jobs", job_strata ]
-      planet_jobs_specialist: [ "[GetSpecialist] Pop £job£ Jobs", job_strata ]
-      planet_jobs_specialist_only: [ "$pop_cat_specialist$ Pop £job£ Jobs", job_strata ]
-      planet_jobs_ruler: [ "$pop_cat_ruler$ Pop £job£ Jobs", job_strata ]
-      planet_jobs_simple_drone: [ "$pop_cat_simple_drone$ Pop £job£ Jobs", job_strata ]
-      planet_jobs_complex_drone: [ "$pop_cat_complex_drone$ Pop £job£ Jobs", job_strata ]
-      planet_jobs_complex_and_simple_drone: [ "$pop_cat_complex_drone$ Drone Pop £job£ Jobs", job_strata ]
+      planet_jobs_slave: [ "$pop_cat_slave$ Pop $tec_loc_jobs$", job_strata ]
+      planet_jobs_worker: [ "[GetWorker] Pop $tec_loc_jobs$", job_strata ]
+      planet_jobs_worker_only: [ "$pop_cat_worker$ Pop $tec_loc_jobs$", job_strata ]
+      planet_jobs_specialist: [ "[GetSpecialist] Pop $tec_loc_jobs$", job_strata ]
+      planet_jobs_specialist_only: [ "$pop_cat_specialist$ Pop $tec_loc_jobs$", job_strata ]
+      planet_jobs_ruler: [ "$pop_cat_ruler$ Pop $tec_loc_jobs$", job_strata ]
+      planet_jobs_simple_drone: [ "$pop_cat_simple_drone$ Pop $tec_loc_jobs$", job_strata ]
+      planet_jobs_complex_drone: [ "$pop_cat_complex_drone$ Pop $tec_loc_jobs$", job_strata ]
+      planet_jobs_complex_and_simple_drone: [ "$pop_cat_complex_drone$ Drone Pop $tec_loc_jobs$", job_strata ]
       planet_jobs_tec_free_agent: [ '$pop_cat_tec_free_agent$', job_strata ]
 
-      planet_jobs_robotic: [ "§BRobot§! Pop £job£ Jobs", job_archetype ]
-      planet_jobs_organics: [ "§YOrganic§! Pop £job£ Jobs", job_archetype ]
-      planet_jobs_tec_bioservant: [ '§GBioservant§! Pop £job£ Jobs', job_archetype ]
-      planet_jobs_tec_replicant: [ '§BReplicant§! Pop £job£ Jobs', job_archetype ]
+      planet_jobs_robotic: [ "§BRobot§! Pop $tec_loc_jobs$", job_archetype ]
+      planet_jobs_organics: [ "§YOrganic§! Pop $tec_loc_jobs$", job_archetype ]
+      planet_jobs_tec_bioservant: [ '§GBioservant§! Pop $tec_loc_jobs$', job_archetype ]
+      planet_jobs_tec_replicant: [ '§BReplicant§! Pop $tec_loc_jobs$', job_archetype ]
       #      planet_jobs_energyentity: ['§BCyborg§! Pop', job]
-      planet_jobs_latent_psionic: [ '§MLatent Psionic§! Pop £job£ Jobs', job_archetype ]
-      planet_psionic_jobs: [ '§MPsionic§! Pop £job£ Jobs', job_archetype ]
-      planet_cyborg_jobs: [ '§BCyborg§! Pop £job£ Jobs', job_archetype ]
-      planet_jobs_tec_cybernetics: [ '§ECyborg§! and §BRobot§! Pop £job£ Jobs', job_archetype ]
-      planet_jobs_tec_biopsionic_embroidered: [ '§YEmbroidered§! Pop £job£ Jobs', job_archetype ]
-      planet_jobs_tec_converged: [ '§YConverged§! Pop £job£ Jobs', job_archetype ]
+      planet_jobs_latent_psionic: [ '§MLatent Psionic§! Pop $tec_loc_jobs$', job_archetype ]
+      planet_psionic_jobs: [ '§MPsionic§! Pop $tec_loc_jobs$', job_archetype ]
+      planet_cyborg_jobs: [ '§BCyborg§! Pop $tec_loc_jobs$', job_archetype ]
+      planet_jobs_tec_cybernetics: [ '§ECyborg§! and §BRobot§! Pop $tec_loc_jobs$', job_archetype ]
+      planet_jobs_tec_biopsionic_embroidered: [ '§YEmbroidered§! Pop $tec_loc_jobs$', job_archetype ]
+      planet_jobs_tec_converged: [ '§YConverged§! Pop $tec_loc_jobs$', job_archetype ]
 
-      planet_jobs_tec_main_species: ['Main Species £job£ Jobs', job_archetype ]
-      planet_jobs_tec_xeno_species: ['Xeno Species £job£ Jobs', job_archetype ]
+      planet_jobs_tec_main_species: ['Main Species $tec_loc_jobs$', job_archetype ]
+      planet_jobs_tec_xeno_species: ['Xeno Species $tec_loc_jobs$', job_archetype ]
 
-      planet_jobs_tec_at_war: ['£job£ Jobs', job_when, "At War"]
-      planet_jobs_tec_at_peace: ['£job£ Jobs', job_when, "At Peace"]
+      planet_jobs_tec_at_war: ['$tec_loc_jobs$', job_when, "At War"]
+      planet_jobs_tec_at_peace: ['$tec_loc_jobs$', job_when, "At Peace"]
 
 
-      planet_jobs_organic_slave: [ "§YOrganic§! $pop_cat_slave$ Pop £job£ Jobs", job_strata ]
-      planet_jobs_organic_worker: [ "§YOrganic§! [GetWorker] Pop £job£ Jobs", job_strata ]
-      planet_jobs_organic_specialist: [ "§YOrganic§! [GetSpecialist] Pop £job£ Jobs", job_strata ]
-      planet_jobs_organic_ruler: [ "§YOrganic§! $pop_cat_ruler$ Pop £job£ Jobs", job_strata ]
-      planet_jobs_organic_simple_drone: [ "§YOrganic§! $pop_cat_simple_drone$ Pop £job£ Jobs", job_strata ]
-      planet_jobs_organic_complex_drone: [ "§YOrganic§! $pop_cat_complex_drone$ Pop £job£ Jobs", job_strata ]
+      planet_jobs_organic_slave: [ "§YOrganic§! $pop_cat_slave$ Pop $tec_loc_jobs$", job_strata ]
+      planet_jobs_organic_worker: [ "§YOrganic§! [GetWorker] Pop $tec_loc_jobs$", job_strata ]
+      planet_jobs_organic_specialist: [ "§YOrganic§! [GetSpecialist] Pop $tec_loc_jobs$", job_strata ]
+      planet_jobs_organic_ruler: [ "§YOrganic§! $pop_cat_ruler$ Pop $tec_loc_jobs$", job_strata ]
+      planet_jobs_organic_simple_drone: [ "§YOrganic§! $pop_cat_simple_drone$ Pop $tec_loc_jobs$", job_strata ]
+      planet_jobs_organic_complex_drone: [ "§YOrganic§! $pop_cat_complex_drone$ Pop $tec_loc_jobs$", job_strata ]
 
-      planet_jobs_robotic_slave: [ "§BRobot§! $pop_cat_slave$ Pop £job£ Jobs", job_strata ]
-      planet_jobs_robotic_worker: [ "§BRobot§! [GetWorker] Pop £job£ Jobs", job_strata ]
+      planet_jobs_robotic_slave: [ "§BRobot§! $pop_cat_slave$ Pop $tec_loc_jobs$", job_strata ]
+      planet_jobs_robotic_worker: [ "§BRobot§! [GetWorker] Pop $tec_loc_jobs$", job_strata ]
       # why why why why why why PDX
-      planet_jobs_robot_worker: [ "§BRobot§! [GetWorker] Pop £job£ Jobs", job_strata ]
-      planet_jobs_robotic_specialist: [ "§BRobot§! [GetSpecialist] Pop £job£ Jobs", job_strata ]
-      planet_jobs_robotic_ruler: [ "§BRobot§! $pop_cat_ruler$ Pop £job£ Jobs", job_strata ]
-      planet_jobs_robotic_simple_drone: [ "§BRobot§! $pop_cat_simple_drone$ Pop £job£ Jobs", job_strata ]
-      planet_jobs_robotic_complex_drone: [ "§BRobot§! $pop_cat_complex_drone$ Pop £job£ Jobs", job_strata ]
+      planet_jobs_robot_worker: [ "§BRobot§! [GetWorker] Pop $tec_loc_jobs$", job_strata ]
+      planet_jobs_robotic_specialist: [ "§BRobot§! [GetSpecialist] Pop $tec_loc_jobs$", job_strata ]
+      planet_jobs_robotic_ruler: [ "§BRobot§! $pop_cat_ruler$ Pop $tec_loc_jobs$", job_strata ]
+      planet_jobs_robotic_simple_drone: [ "§BRobot§! $pop_cat_simple_drone$ Pop $tec_loc_jobs$", job_strata ]
+      planet_jobs_robotic_complex_drone: [ "§BRobot§! $pop_cat_complex_drone$ Pop $tec_loc_jobs$", job_strata ]
 
-      planet_pops: ['£pop£ Pops', pop]
+      planet_pops: ['$tec_loc_pops$', pop]
       planet_pop_assemblers: [ 'Pop Assembly', assembler ]
 
-      planet_pops_unemployed: [ 'Unemployed £pop£ Pops', pop ]
-      planet_pops_robotics: [ '§BRobot§! £pop£ Pops', pop ]
-      planet_pops_cyborgs: [ '§BCyborg§! £pop£ Pops', pop ]
-      planet_pops_psionic: [ '§MPsionic§! £pop£ Pops', pop ]
-      planet_pops_organics: [ '§YOrganic§! £pop£ Pops', pop ]
-      planet_pops_lithoids: [ 'Lithoid £pop£ Pops', pop ]
-      planet_pops_tec_bioservant: [ '§GBioservant§! £pop£ Pops', pop ]
-      planet_pops_tec_replicant: [ '§BReplicant§! £pop£ Pops', pop ]
-      planet_pops_tec_cybernetics: [ '§ECyborg§! and §BRobot§! £pop£ Pops', pop ]
-      planet_pops_biosynth: [ '§BBio-synth§! Pops', pop ]
+      planet_pops_unemployed: [ 'Unemployed $tec_loc_pops$', pop ]
+      planet_pops_robotics: [ '§BRobot§! $tec_loc_pops$', pop ]
+      planet_pops_cyborgs: [ '§BCyborg§! $tec_loc_pops$', pop ]
+      planet_pops_psionic: [ '§MPsionic§! $tec_loc_pops$', pop ]
+      planet_pops_organics: [ '§YOrganic§! $tec_loc_pops$', pop ]
+      planet_pops_lithoids: [ 'Lithoid $tec_loc_pops$', pop ]
+      planet_pops_tec_bioservant: [ '§GBioservant§! $tec_loc_pops$', pop ]
+      planet_pops_tec_replicant: [ '§BReplicant§! $tec_loc_pops$', pop ]
+      planet_pops_tec_cybernetics: [ '§ECyborg§! and §BRobot§! $tec_loc_pops$', pop ]
+      planet_pops_biosynth: [ '§BBio-synth§! $tec_loc_pops$', pop ]
 
       planet_bio_trophies: [ '£job_bio_trophy£ $pop_cat_bio_trophy_plural$', job ]
       planet_farmers: [ '£job_farmer£ [GetFarmerPlural]', job ]
@@ -371,12 +371,12 @@ languages:
       pop_category_rulers: [ '$RULERS$', pop_category ]
       pop_category_tec_free_agent: [ '$planet_tec_free_agents$', pop_category ]
 
-      pop_category_normal_resources: [ '£pop£ Pops', pop_category ]
-      pop_category_cyborgs_normal_resources: [ '§BCyborg§! £pop£ Pops', pop_category ]
+      pop_category_normal_resources: [ '$tec_loc_pops$', pop_category ]
+      pop_category_cyborgs_normal_resources: [ '§BCyborg§! $tec_loc_pops$', pop_category ]
       
-      pop_category_purge_resources: [ 'Purged £pop£ Pops', pop_category ]
-      pop_category_assimilation_resources: [ 'Assimilated £pop£ Pops', pop_category ]
-      pop_category_non_slave_resources: ['Non-Slave £pop£ Pops', pop_category]
+      pop_category_purge_resources: [ 'Purged $tec_loc_pops$', pop_category ]
+      pop_category_assimilation_resources: [ 'Assimilated $tec_loc_pops$', pop_category ]
+      pop_category_non_slave_resources: ['Non-Slave $tec_loc_pops$', pop_category]
 
       
       pop_category_psionic_slave: [ '§MPsionic§! $SLAVES$', pop_category ]
