fix: missing locs and modifiers, fix pasarti and theian initializers

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -324,6 +324,9 @@ languages:
       planet_chemists: [ '£job_chemist£ $job_chemist_plural$', job ]
       planet_artisans: [ '£job_artisan£ [GetArtisan]', job ]
       planet_colonists: [ '£job_colonist£ $job_colonist_plural$', job]
+      planet_knights: [ '£job_knight_commander£ $job_knight_commander$ and £job_knight£ $job_knight_plural$', job]
+      planet_traders: [ '£job_trader£ $job_trader_plural$', job]
+      planet_astrometeorologists: [ '£job_astrometeorologist£ [GetAstrometeorologistPlural]', job]
 
       planet_criminals: [ '£job_criminal£ [GetCriminal]', job ]
       planet_clerks: [ '£job_clerk£ $job_clerk_plural$', job ]
@@ -359,6 +362,8 @@ languages:
       planet_bath_attendants_machine: ['£job_bath_attendant_machine£ $job_bath_attendant_machine_plural$', job]
 
       planet_tec_gene_recombinators: ['£tec_gene_recombinator£ $job_tec_gene_recombinator_plural$', job]
+      planet_tec_archivists: ['£tec_minor_archivist£ $job_tec_minor_archivist_plural$', job]
+      planet_tec_techno_priests: ['£tec_techno_priest£ $job_tec_techno_priest_plural$', job]
 
       pop_category_purge: [ 'Purged Pops', pop_category ]
       pop_category_robot: [ 'Robotic Servants', pop_category ]
@@ -528,160 +533,10 @@ languages:
 
     jobs:
       # workers
-      tec_labour_hero: [job_add_generic]
-      gladiator: [job_add_generic]
-      tec_druid: [job_add_generic]
-      tec_peasant: [job_add_generic, primitive_laborer]
-      tec_minor_roboticist: [job_add_generic, roboticist]
-      tec_labrat: [job_add_generic, roboticist]
-      tec_reef_miner: [job_add_generic, tec_reef_drone]
-      tec_planner: [job_add_generic, herder]
-      tec_hired_miner: [job_add_generic, miner]
-      tec_hired_farmer: [job_add_generic, farmer]
-      tec_hired_technician: [job_add_generic, technician]
-      tec_hired_soldier: [job_add_generic, soldier]
-      tec_hired_foundry: [job_add_generic, foundry]
-      tec_hired_catalytic: [job_add_generic, catalytic_technician]
-      tec_hired_artisan: [job_add_generic, artisan]
-      tec_hired_researcher: [job_add_generic, researcher]
-      tec_hired_entertainer: [job_add_generic, entertainer]
-      tec_state_worker: [job_add_generic]
-      tec_matterminer: [job_add_generic, tec_geoengineer]
-      tec_scavenger: [job_add_generic, herder]
-      # specialists
-      tec_minor_archivist: [job_add_generic]
-      tec_minor_occultist: [job_add_generic, tec_minor_archivist]
-      tec_techno_priest: [job_add_generic]
-      tec_mecha_priest: [job_add_generic]
-      templar: [job_add_generic]
-      tec_paperwork_priest: [job_add_generic]
-      tec_atom_priest: [job_add_generic]
-      tec_paranormal_priest: [job_add_generic]
-      tec_starseeker_priest: [job_add_generic]
-      tec_cycle_priest: [job_add_generic]
-      tec_wealth_priest: [job_add_generic]
-      tec_mentat_priest: [job_add_generic]
-      tec_geoengineer: [job_add_generic]
-      tec_xenobiologist: [job_add_generic]
-      mining_engineer: [job_add_generic]
-      deep_miner: [job_add_generic]
-      tec_mercenary: [job_add_generic, soldier]
-      tec_transcendent: [job_add_generic]
-      tec_necromonger: [job_add_generic]
-      tec_psychohistorian: [job_add_generic]
-      tec_technomancer: [job_add_generic]
-      tec_starseeker: [job_add_generic]
-      tec_psi_researcher: [job_add_generic]
-      tec_bio_researcher: [job_add_generic]
-      tec_mecha_researcher: [job_add_generic]
-      tec_diversifier: [job_add_generic]
-      tec_astrologer: [job_add_generic]
-      tec_singularity_researcher: [job_add_generic]
-      tec_state_academic: [job_add_generic]
-      tec_state_administrator: [job_add_generic]
-      tec_state_functionary: [job_add_generic]
-      tec_master_roboticist: [job_add_generic, roboticist]
-      tec_bioengineer: [job_add_generic]
-      tec_master_bioengineer: [job_add_generic, tec_bioengineer]
-      tec_cloner: [job_add_generic]
-      tec_master_cloner: [job_add_generic, tec_cloner]
-      tec_cyborg_ripperdoc: [job_add_generic]
-      tec_shipyard_technician: [job_add_generic]
-      tec_shipyard_engineer: [job_add_generic]
-      tec_telecom_technician: [job_add_generic]
-      tec_planetdefense_technician: [job_add_generic]
-      tec_naval_operator: [job_add_generic]
-      tec_trade_specialist: [job_add_generic]
-      tec_nanite_researcher: [job_add_generic]
-      tec_ai_operator: [job_add_generic, coordinator]
-      tec_ai_ordinator: [job_add_generic, coordinator]
-      tec_pathfinder: [job_add_generic]
-      tec_omniguard: [job_add_generic]
-      # other
-      tec_hedonist: [ job_add_generic, fe_hedonist ]
-      # rulers
-      tec_commander: [job_add_generic]
-      tec_supervisor_bureaucrat: [job_add_generic]
-      tec_grand_archivist: [job_add_generic]
-      tec_technocrat: [job_add_generic]
-      tec_master_tinker: [job_add_generic, foundry]
-      tec_grand_occultist: [job_add_generic, tec_grand_archivist]
-      tec_mogul: [job_add_generic, tec_corpo_bank_director]
-      tec_landowner: [job_add_generic, enforcer]
-      tec_high_inquisitor: [job_add_generic]
-      tec_procurator: [job_add_generic]
-      tec_diplomat: [job_add_generic]
-      tec_overseer: [job_add_generic]
-      tec_chemical_baron: [job_add_generic]
-      tec_corpo_consultant: [job_add_generic, tec_technocrat]
-      tec_corpo_bank_director: [job_add_generic]
-      tec_corpo_prospector: [job_add_generic, tec_geoengineer]
-      tec_corpo_ecoprospector: [job_add_generic, tec_xenobiologist]
-      tec_corpo_parabellum: [job_add_generic, soldier]
-      tec_corpo_tinker: [job_add_generic, foundry]
-      tec_corpo_procurator: [job_add_generic]
-      tec_corpo_chancellor: [job_add_generic]
-      tec_corpo_overseer: [job_add_generic, tec_overseer]
-      tec_ai_computator: [job_add_generic]
-      tec_ai_high_ordinator: [job_add_generic]
-      tec_consular: [job_add_generic]
-      tec_crime_consular: [job_add_generic]
-      tec_imperial_admin: [job_add_generic, administrator]
-      tec_corporate_parabellum_corp: [job_add_generic]
-      # gestalt
-      tec_broodqueen_drone: [job_add_generic]
-      tec_broodlord_drone: [job_add_generic]
-      tec_overmind_drone: [job_add_generic]
-      tec_zealot_drone: [job_add_generic]
-      tec_prime_drone: [job_add_generic]
-      tec_prime_performance_drone: [job_add_generic]
-      tec_prime_research_drone: [job_add_generic]
-      tec_prime_reimaginator_drone: [job_add_generic]
-      tec_prime_debugger_drone: [job_add_generic]
-      tec_prime_warform_drone: [job_add_generic]
-      tec_prime_acquisition_drone: [job_add_generic]
-      tec_prime_industrial_drone: [job_add_generic]
-      tec_prime_signal_drone: [job_add_generic]
-      tec_prime_umbral_drone: [job_add_generic]
-      tec_prime_derivator_drone: [job_add_generic]
-      tec_pherodrone_drone: [job_add_generic]
-      tec_resonance_drone: [job_add_generic, synapse_drone]
-      tec_podtender_drone: [job_add_generic]
-      tec_network_drone: [job_add_generic, coordinator]
-      tec_spareparts_drone: [job_add_generic, maintenance_drone]
-      tec_replicator_drone: [job_add_generic, roboticist]
-      tec_master_replicator_drone: [job_add_generic, roboticist]
-      tec_cloner_drone: [job_add_generic, tec_cloner]
-      tec_master_cloner_drone: [job_add_generic, tec_cloner]
-      tec_bioengineer_drone: [job_add_generic, tec_bioengineer]
-      tec_master_bioengineer_drone: [job_add_generic, tec_bioengineer]
-      tec_cyborg_ripperdoc_drone: [job_add_generic]
-      tec_ecoresearcher_drone: [job_add_generic, tec_xenobiologist]
-      tec_naval_operator_drone: [job_add_generic, tec_naval_operator]
-      tec_shipyard_technician_drone: [job_add_generic, tec_shipyard_technician]
-      tec_shipyard_engineer_drone: [job_add_generic, tec_shipyard_engineer]
-      tec_trade_drone: [job_add_generic, tec_trade_specialist]
-      tec_numismatic_drone: [job_add_generic, numistic_priest]
-      tec_depth_drone: [job_add_generic]
-      tec_reef_drone: [job_add_generic]
-      tec_aqua_drone: [job_add_generic, angler]
-      tec_thermogenerator_drone: [job_add_generic, technician_drone]
-      tec_hydrorelay_drone: [job_add_generic]
-      tec_mental_servant: [job_add_generic, servant]
-      tec_scavenger_drone: [job_add_generic, miner]
-      tec_matterminer_drone: [job_add_generic, tec_geoengineer]
-      tec_hive_admin_drone: [job_add_generic, administrator]
-      tec_machine_admin_drone: [job_add_generic, administrator]
-      tec_planner_drone: [job_add_generic, miner]
-      tec_spliced: [job_add_generic]
-      tec_composed: [job_add_generic]
-      tec_encased: [job_add_generic]
-      tec_metamorphed: [job_add_generic]
-      tec_development_drone: [job_add_generic, evaluator]
-      tec_nanite_researcher_drone: [job_add_generic, tec_nanite_researcher]
-      tec_nurturer_drone: [job_add_generic]
-      # other
-      ai_unobtainium: [job_add_generic]
+      tec_gene_recombinator_drone: [job_add_generic, tec_geneticist]
+      tec_gene_recombinator: [job_add_generic, tec_geneticist]
+      tec_geneticist_drone: [job_add_generic, tec_geneticist]
+      tec_geneticist: [job_add_generic]
 
 addons:
   suffixes:
@@ -692,6 +547,6 @@ addons:
     - modded_other
     - tec_experimental
 
-missing_sprites: # paste log errors here with missing modified icons, preferably remove after to not regen in case these sprites are added
-  default: gfx/interface/icons/modifiers/mod_unknown.dds
-  errors: ''
+#missing_sprites: # paste log errors here with missing modified icons, preferably remove after to not regen in case these sprites are added
+#  default: gfx/interface/icons/modifiers/mod_unknown.dds
+#  errors: ''
