feat: edicts for missing ethics, ordering edicts

--- a/tools/uml/config.yml
+++ b/tools/uml/config.yml
@@ -363,6 +363,7 @@ languages:
       planet_tec_gene_recombinators: ['£tec_gene_recombinator£ $job_tec_gene_recombinator_plural$', job]
       planet_tec_archivists: ['£tec_minor_archivist£ $job_tec_minor_archivist_plural$', job]
       planet_tec_techno_priests: ['£tec_techno_priest£ $job_tec_techno_priest_plural$', job]
+      planet_jobs_hired: ['£job£ $tec_private_hired$ Jobs', job]
 
       pop_category_purge: [ 'Purged Pops', pop_category ]
       pop_category_robot: [ 'Robotic Servants', pop_category ]
